[editable] XUI-1253 Safari overflow shadow fix (#4828)
* XUI-1117 React docs for Editable table.

* XUI-1253 Fixed overflow shadow for Safari.

--- a/src/sass/7-components/_editabletable.scss
+++ b/src/sass/7-components/_editabletable.scss
@@ -27,9 +27,9 @@ $xui-editabletable-shadowcover-size: $xui-s-3xlarge;
   background: /* Shadow covers */ linear-gradient(
       90deg,
       $xui-color-white 30%,
-      rgba($xui-color-black, 0)
+      rgba($xui-color-white, 0)
     ),
-    linear-gradient(90deg, rgba($xui-color-black, 0), $xui-color-white 70%) 100% 0,
+    linear-gradient(90deg, rgba($xui-color-white, 0), $xui-color-white 70%) 100% 0,
     /* Shadows */
       linear-gradient(90deg, rgba($xui-color-black, 0.2) 0%, rgba($xui-color-black, 0) 100%),
     linear-gradient(270deg, rgba($xui-color-black, 0.2) 0%, rgba($xui-color-black, 0) 100%) 100% 0;
